total decks with css updated

--- a/anki-user-manager/templates/student_dashboard.html
+++ b/anki-user-manager/templates/student_dashboard.html
@@ -9,7 +9,7 @@
     {% if deck_stats %}
     <table class="table table-bordered table-striped">
       <thead class="table-light">
-        <tr>
+        <tr class="{% if deck.is_total %}total-row{% endif %}">
           <th>Deck</th>
           <th>Total Cards</th>
           <th>Due Cards</th>
