--- a/anki-user-manager/templates/student_dashboard.html
+++ b/anki-user-manager/templates/student_dashboard.html
@@ -18,7 +18,7 @@
       </thead>
       <tbody>
         {% for d in deck_stats %}
-        <tr>
+        <tr class="{% if deck['is_total'] %}total-row{% endif %}">
           <td>{{ d.deck }}</td>
           <td>{{ d.total }}</td>
           <td>{{ d.due }}</td>
