--- a/anki-user-manager/templates/student_dashboard.html
+++ b/anki-user-manager/templates/student_dashboard.html
@@ -18,7 +18,7 @@
       </thead>
       <tbody>
         {% for d in deck_stats %}
-        <tr>
+        <tr class="{{ 'total-row' if deck.get('is_total') else '' }}">
           <td>{{ d.deck }}</td>
           <td>{{ d.total }}</td>
           <td>{{ d.due }}</td>
